--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # PROJECT SPECIFIC IGNORES
 # =============================================================================
 
+*.csv
+*.xls
+*.ods
+*.tsv
+
 # =============================================================================
 # GENERAL PYTHON GITIGNORE
 # =============================================================================
