--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     colorlog
+    pandas
 python_requires = >=3.7
 include_package_data = True
 package_dir =
