--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ packages = find:
 install_requires =
     colorlog
     pandas
+    pyyaml
 python_requires = >=3.7
 include_package_data = True
 package_dir =
