--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     colorlog
+    gitpython
     pandas
     pyyaml
 python_requires = >=3.7
