Ignore output plots

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # PROJECT SPECIFIC IGNORES
 # =============================================================================
 
+*.png
+*.pdf
 *.csv
 *.xls
 *.ods
