--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,7 @@ repos:
     hooks:
       - id: codespell
         args: ["-I", "codespell.txt"]
+        exclude: '.*\.ipynb'
   # - repo: https://github.com/kynan/nbstripout
   # rev: 0.6.1
   # hooks:
