Push latest update

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     gitpython
     pandas
     pyyaml
+    python-frontmatter
 python_requires = >=3.7
 include_package_data = True
 package_dir =
