Add SciencePlots to dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     pandas
     pyyaml
     python-frontmatter
+    SciencePlots
 python_requires = >=3.7
 include_package_data = True
 package_dir =
